cis-k8s-1-5-1/5.1.3_prohibit-role-wildcard-access.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProhibitRoleWildcardAccess
metadata:
  name: prohibit-role-wildcard-access
  annotations:
    # This constraint is not certified by CIS.
    description: 'Restricts use of wildcards in Roles and ClusterRoles.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.1.3'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
