cis-k8s-1-5-1/5.2.1_psp-privileged-container.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
  annotations:
    # This constraint is not certified by CIS.
    description: 'Restricts containers with `securityContext.privileged` set to `true`.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.2.1'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
