cis-k8s-1-5-1/5.2.2-5.2.3_psp-host-namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata:
  name: psp-host-namespace
  annotations:
    # This constraint is not certified by CIS.
    description: 'Prohibits containers from running with `hostPID` or `hostIPC` set to `true`.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.2.2, 5.2.3'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
