cis-k8s-1-5-1/5.2.4_psp-host-network-ports.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: psp-host-network-ports
  annotations:
    # This constraint is not certified by CIS.
    description: 'Restricts containers from rnuning with the `hostNetwork` flag set to `true`.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.2.4'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
  parameters:
    hostNetwork: true
    #min: 80
    #max: 9000
