cis-k8s-1-5-1/5.2.6_psp-restrict_root_containers.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-pods-must-run-as-nonroot
  annotations:
    # This constraint is not certified by CIS.
    description: 'Restricts containers from running as the root user.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.2.6'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
