cis-k8s-1-5-1/5.2.7-5.2.8-5.2.9_psp-capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: psp-capabilities
  annotations:
    # This constraint is not certified by CIS.
    description: 'Requires containers to drop the `NET_RAW` capability; constainers may not have allowedCapabilities set to anything other than an empty array; '
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.2.7, 5.2.8, 5.2.9'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
  parameters:
    allowedCapabilities: []
    requiredDropCapabilities:
    - NET_RAW
