cis-k8s-1-5-1/5.4.1_no-secrets-as-env-vars.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoEnvVarSecrets
metadata:
  name: no-secrets-as-env-vars
  annotations:
    # This constraint is not certified by CIS.
    description: 'Prohibits secrets as environment variables in container definitions; instead, use mounted secret files in data volumes.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.4.1'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
