cis-k8s-1-5-1/5.7.4_restrict-default-namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictNamespaces
metadata:
  name: restrict-default-namespace
  annotations:
    # This constraint is not certified by CIS.
    description: 'Restricts resources from using the `default` namespace.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.7.4'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
  parameters:
    restrictedNamespaces:
    - default
